# CubePatterns

./: README
doc/: Pattern.tex
doc/files/: pattern1.tex  pattern10.tex  pattern11.tex  pattern12.tex  pattern13.tex  pattern14.tex  pattern15.tex  pattern16.tex  pattern17.tex  pattern18.tex  pattern19.tex  pattern2.tex  pattern20.tex  pattern21.tex  pattern22.tex  pattern23.tex  pattern24.tex  pattern3.tex  pattern4.tex  pattern5.tex  pattern6.tex  pattern7.tex  pattern8.tex  pattern9.tex
include/: Cube.h  CubePatterns.h  PatternFactory.h  Patterns.h  Point.h  TransitionTemplate.h
src/: .Cube.cpp.swp  .Patterns.cpp.swp  CMakeLists.txt  Cube.cpp  CubePatterns.cpp  PatternFactory.cpp  PatternFactory.txt  Patterns.cpp  PatternsConfig.h.in  Point.cpp  TestCube.cpp  TestPattern.cpp  TestTemplate.cpp  TransitionTemplate.cpp  findPattern.py
test/: patterns1.txt  patterns10.txt  patterns11.txt  patterns12.txt  patterns13.txt  patterns14.txt  patterns15.txt  patterns16.txt  patterns17.txt  patterns18.txt  patterns19.txt  patterns2.txt  patterns20.txt  patterns21.txt  patterns22.txt  patterns23.txt  patterns24.txt  patterns3.txt  patterns4.txt  patterns5.txt  patterns6.txt  patterns7.txt  patterns8.txt  patterns9.txt
